Implement waistY-aware seam endpoint selection
- Modified applySeamSnapping() to compute prevWaistRight.y and curWaistLeft.y
- Replaced getSeamAnchor() with selectSeamEndpoint() that chooses between first/last point based on waistY
- TOP mode: selects endpoint with y < waistY, else smaller y
- BOTTOM mode: selects endpoint with y > waistY, else larger y
- Updated tests to verify correct endpoint selection
- All tests pass (13/13)

Co-authored-by: arsi-apli <22594510+arsi-apli@users.noreply.github.com>